--- a/src/app/login-alumno/login-alumno.component.css
+++ b/src/app/login-alumno/login-alumno.component.css
@@ -1,17 +1,48 @@
-.card {
-  margin-top: 20px;
+
+body, html {
+  /* height: 100%; */
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.form-group {
-  margin-bottom: 15px;
+.bg {
+  background-color: #007B8F; /* Using a solid background color */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
 }
 
-.btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
+.card-body .card-title {
+  color: black;
+  font-size: 3rem;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.card-transparent {
-  background-color: transparent !important; /* Asegura que sobrescriba otros estilos */
-  border: none; /* Opcional: elimina el borde si deseas un look completamente transparente */
+.card-body {
+  color: black;
+  font-size: 5rem;
+  background: rgba(255, 255, 255, 0.5); /* Adding a semi-transparent background for readability */
+  padding: 20px;
+  border-radius: 10%;
 }
+
+label {
+  display: flex;
+  font-size: 2rem;
+}
+
+.btn-custom {
+  background-color: white;
+  color: black;
+}
+
+.bg {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../../assets/fondo-final-pagina-central.png');
+  background-size: cover;
+  background-position: center;
+}
+
