--- a/src/app/login-alumno/login-alumno.component.html
+++ b/src/app/login-alumno/login-alumno.component.html
@@ -1,24 +1,24 @@
+<div class="bg">
 <div class="container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="card card-transparent">
-        <div class="card-header">
-          <h5 class="card-title">Iniciar Sesión</h5>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card bg-transparent">
         <div class="card-body">
-          <form [formGroup]="loginForm">
-            <div class="form-group">
+          <h2 class="text-center card-title">Iniciar Sesion</h2>
+          <form>
+            <div class="form-group mt-4">
               <label for="username">Usuario</label>
-              <input type="text" class="form-control" id="username" formControlName="username">
+              <input type="text" class="form-control mt-2" id="username" placeholder="Enter your username">
             </div>
-            <div class="form-group">
+            <div class="form-group mt-4">
               <label for="password">Contraseña</label>
-              <input type="password" class="form-control" id="password" formControlName="password">
+              <input type="password" class="form-control mt-2" id="password" placeholder="Enter your password">
             </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button type="submit" class="btn btn-primary btn-block mt-4">Login</button>
           </form>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
