--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!-- <app-bienvenida></app-bienvenida> -->
-<router-outlet />
+<router-outlet>   
+<!--<app-bienvenida></app-bienvenida>-->
+</router-outlet>
