--- a/src/app/login-alumno/login-alumno.component.html
+++ b/src/app/login-alumno/login-alumno.component.html
@@ -5,17 +5,22 @@
       <div class="card bg-transparent">
         <div class="card-body">
           <h2 class="text-center card-title">Iniciar Sesion</h2>
-          <form>
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="form-group mt-4">
-              <label for="username">Usuario</label>
-              <input type="text" class="form-control mt-2" id="username" placeholder="Enter your username">
+              <label for="correo">Correo</label>
+              <input type="text" formControlName="correo" class="form-control mt-2" id="correo" placeholder="Enter your email">
             </div>
             <div class="form-group mt-4">
               <label for="password">Contraseña</label>
-              <input type="password" class="form-control mt-2" id="password" placeholder="Enter your password">
+              <input type="password" formControlName="password" class="form-control mt-2" id="password" placeholder="Enter your password">
             </div>
-            <button type="submit" class="btn btn-primary btn-block mt-4">Login</button>
           </form>
+          <button 
+              class="btn btn-primary btn-block mt-4"
+              (click)="login()"
+              >
+              Login
+          </button>
         </div>
       </div>
     </div>
