--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,25 @@
-<p>dashboard works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Dashboard</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Realizar Test</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Mi Historial Clínico</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Mi Cuenta</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../login-alumno" (click)="exit()">Cerrar Sesión</a>
+            </li>
+        </ul>
+    </div>
+</nav>
