--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -8,7 +8,7 @@
       <div class="card alumnos-card square-card">
         <div class="card-body">
           <h5 class="card-title">ALUMNOS</h5>
-          <a class="btn btn-primary" (click)="onClick('alumno')">INGRESAR</a>
+          <a class="btn btn-primary" (click)="onClick('estudiante')">INGRESAR</a>
         </div>
       </div>
     </div>
