--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
                     <a class="nav-link text-white" href="../perfil">Mi Cuenta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="../login-alumno" (click)="exit()">Cerrar Sesión</a>
+                    <a class="nav-link text-white" href="../login" (click)="exit()">Cerrar Sesión</a>
                 </li>
             </ul>
         </div>
