--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,23 +8,53 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="../dashboard">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="../test/">Realizar Test</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="../historial/">Mi Historial Clínico</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="../perfil">Mi Cuenta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="../usuarios" (click)="exit()">Cerrar Sesión</a>
-                </li>
-            </ul>
+            
+            <div *ngIf="user === 'especialista'; else studentNavbar">
+                <ng-container *ngTemplateOutlet="specialistNavbar"></ng-container>
+            </div>
+
+
         </div>
     </div>
 </nav>
+
+
+<ng-template #specialistNavbar>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../dashboard">Inicio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../dashboard">Pacientes</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../dashboard">Horario</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../perfil">Mi Cuenta</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../usuarios" (click)="exit()">Cerrar Sesión</a>
+        </li>
+    </ul>
+</ng-template>
+
+<ng-template #studentNavbar>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../dashboard">Inicio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../test/">Realizar Test</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../historial/">Mi Historial Clínico</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../perfil">Mi Cuenta</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="../usuarios" (click)="exit()">Cerrar Sesión</a>
+        </li>
+    </ul>
+</ng-template>
