--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,8 +12,6 @@
             <div *ngIf="user === 'especialista'; else studentNavbar">
                 <ng-container *ngTemplateOutlet="specialistNavbar"></ng-container>
             </div>
-
-
         </div>
     </div>
 </nav>
@@ -25,10 +23,10 @@
             <a class="nav-link text-white" href="../dashboard">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="../dashboard">Pacientes</a>
+            <a class="nav-link text-white" href="../pacientes">Pacientes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="../dashboard">Horario</a>
+            <a class="nav-link text-white" href="../horario">Horario</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="../perfil">Mi Cuenta</a>
