--- a/src/app/sites/tests-performed/tests-performed.component.css
+++ b/src/app/sites/tests-performed/tests-performed.component.css
@@ -13,11 +13,12 @@ h2 {
 .list-group-item {
     border: 1px solid #ddd;
     border-radius: 5px;
-    transition: background-color 0.2s ease;
+    transition: all 0.3s;
 }
 
 .list-group-item:hover {
     background-color: #f8f9fa;
+    scale:1.05;
 }
 
 .list-group-item a {
