--- a/src/app/sites/my-profile/my-profile.component.html
+++ b/src/app/sites/my-profile/my-profile.component.html
@@ -37,7 +37,7 @@
     </ng-container>
 
     <!-- Información de Paciente -->
-    <ng-container *ngIf="paciente">
+    <ng-container *ngIf="paciente && tipo_usuario=='paciente'">
         <div class="card mb-4">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">Información de Paciente</h4>
@@ -48,6 +48,21 @@
             </div>
         </div>
     </ng-container>
+
+    <!-- Información de Especialista -->
+    <ng-container *ngIf="especialista && tipo_usuario=='especialista'">
+      <div class="card mb-4">
+          <div class="card-header bg-success text-white">
+              <h4 class="mb-0">Información de Especialista</h4>
+          </div>
+          <div class="card-body">
+              <p><strong>ID Especialista:</strong> {{ especialista.id_especialista }}</p>
+              <p><strong>ID Usuario Asociado:</strong> {{ especialista.id_usuario }}</p>
+              <p><strong>Licencia:</strong> {{especialista.licencia}}</p>
+              <p><strong>Especialidad:</strong> {{especialista.especialidad}}</p>
+          </div>
+      </div>
+  </ng-container>
 
     <!-- Mensaje si no hay datos disponibles -->
     <ng-template #noDataTemplate>
