--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -20,13 +20,10 @@
 <ng-template #specialistNavbar>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link text-white" href="../dashboard">Inicio</a>
+            <a class="nav-link text-white" href="../home">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="../pacientes">Pacientes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-white" href="../horario">Horario</a>
+            <a class="nav-link text-white" href="../vigilance">Vigilancia</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="../my-profile">Mi Cuenta</a>
