--- a/src/app/sites/autenticacion/login/login.component.html
+++ b/src/app/sites/autenticacion/login/login.component.html
@@ -18,17 +18,17 @@
                             </div>
                         </form>
                         <div class="options">
-                            <button 
+                            <button
                                 class="btn btn-primary btn-block mt-4"
                                 (click)="login()"
                             >
                                 Login
                             </button>
-                            <button *ngIf="user === 'paciente'" class="btn btn-secondary btn-block mt-4"
+                            <button *ngIf="user === 'paciente'" class="btn btn-secondary btn-block mt-4" (click)="openModal(estudianteContent); obtenerDepartamentos(registerPacienteForm)"
                             >
                                 Registrar
                             </button>
-                            <button *ngIf="user === 'especialista'" class="btn btn-secondary btn-block mt-4"
+                            <button *ngIf="user === 'especialista'" class="btn btn-secondary btn-block mt-4" (click)="openModal(especialistaContent); obtenerDepartamentos(registrarEspecialistaForm)"
                             >
                                 Registrar
                             </button>
@@ -70,16 +70,16 @@
             </div>
         </div>
     </div>
-</div>
+  </div> -->
 
 <ng-template #estudianteContent let-modal>
     <div class="modal-header">
-        <h5 class="modal-title">Registrar Estudiante</h5>
+        <h5 class="modal-title">Registrar Paciente</h5>
     </div>
     <div class="modal-body">
-        <form [formGroup]="registerEstudianteForm" class="letter">
+        <form [formGroup]="registerPacienteForm" class="letter">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <h4>Datos Personales</h4>
                     <div class="form-group">
                         <label for="tipo_documento">Tipo de Documento</label>
@@ -110,10 +110,41 @@
                             placeholder="Ingrese su apellido materno">
                     </div>
                     <div class="form-group">
+                      <label for="departamento">Departamento</label>
+                      <select [(ngModel)]="departamento" formControlName="departamento" class="form-control" id="departamento" (change)="obtenerProvincias(departamento, registerPacienteForm)">
+                        <option *ngFor="let depart of departamentos" [value]="depart">{{depart}}</option>
+                      </select>
+                      <label for="provincia">Provincia</label>
+                      <select [(ngModel)]="provincia" formControlName="provincia" class="form-control" id="provincia" (change)="obtenerDistritos(departamento, provincia)">
+                        <option *ngFor="let prov of provincias" [value]="prov">{{prov}}</option>
+                      </select>
+                      <label for="distrito">Distrito</label>
+                      <select [(ngModel)]="distrito" formControlName="distrito" class="form-control" id="distrito">
+                        <option *ngFor="let distri of distritos" [value]="distri">{{distri}}</option>
+                      </select>
+                  </div>
+                    <div class="form-group">
                         <label for="telefono">Teléfono</label>
                         <input type="text" formControlName="telefono" class="form-control" id="telefono"
                             placeholder="Ingrese su teléfono">
                     </div>
+                    <!-- fecha nacimiento -->
+                    <div class="form-group">
+                        <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+                        <input type="date" formControlName="fecha_nacimiento" class="form-control" id="fecha_nacimiento"
+                        placeholder="Ingrese su fecha de nacimiento">
+                    </div>
+                    <!-- Sexo -->
+                    <div class="form-group">
+                        <label for="sexo">Sexo</label>
+                        <select formControlName="sexo" class="form-control" id="sexo">
+                            <option value="Masculino">Masculino</option>
+                            <option value="Femenino">Femenino</option>
+                            <option value="Otro">Otro</option>
+                        </select>
+                    </div>
+
+                    <h4>Datos de Usuario</h4>
                     <div class="form-group">
                         <label for="correo">Correo</label>
                         <input type="email" formControlName="correo" class="form-control" id="correo"
@@ -128,39 +159,6 @@
                         <label for="confirm_password">Confirmar Contraseña</label>
                         <input type="password" formControlName="confirm_password" class="form-control"
                             id="confirm_password" placeholder="Confirme su contraseña">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <h4>Datos de Estudiante</h4>
-                    <div class="form-group">
-                        <label for="anio_ingreso">Año de Ingreso</label>
-                        <input type="text" formControlName="anio_ingreso" class="form-control" id="anio_ingreso"
-                            placeholder="Ingrese el año de ingreso">
-                    </div>
-                    <div class="form-group">
-                        <label for="base">Base</label>
-                        <input type="text" formControlName="base" class="form-control" id="base"
-                            placeholder="Ingrese la base">
-                    </div>
-                    <div class="form-group">
-                        <label for="carrera">Carrera</label>
-                        <input type="text" formControlName="carrera" class="form-control" id="carrera"
-                            placeholder="Ingrese la carrera">
-                    </div>
-                    <div class="form-group">
-                        <label for="ciclo_actual">Ciclo Actual</label>
-                        <input type="text" formControlName="ciclo_actual" class="form-control" id="ciclo_actual"
-                            placeholder="Ingrese el ciclo actual">
-                    </div>
-                    <div class="form-group">
-                        <label for="cod_estudiante">Código de Estudiante</label>
-                        <input type="text" formControlName="cod_estudiante" class="form-control" id="cod_estudiante"
-                            placeholder="Ingrese el código de estudiante">
-                    </div>
-                    <div class="form-group">
-                        <label for="facultad">Facultad</label>
-                        <input type="text" formControlName="facultad" class="form-control" id="facultad"
-                            placeholder="Ingrese la facultad">
                     </div>
                 </div>
             </div>
@@ -173,77 +171,113 @@
 </ng-template>
 
 <ng-template #especialistaContent let-modal>
-    <div class="modal-header">
-        <h5 class="modal-title">Registrar Especialista</h5>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="registerEspecialistaForm" class="letter">
-            <div class="row">
-                <div class="col-md-6">
-                    <h4>Datos Personales</h4>
-                    <div class="form-group">
-                        <label for="tipo_documento">Tipo de Documento</label>
-                        <select formControlName="tipo_documento" class="form-control" id="tipo_documento">
-                            <option value="DNI">DNI</option>
-                            <option value="Pasaporte">Pasaporte</option>
-                            <option value="Carnet de Extranjería">Carnet de Extranjería</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="documento">Número de Documento</label>
-                        <input type="text" formControlName="documento" class="form-control" id="documento"
-                            placeholder="Ingrese su número de documento">
-                    </div>
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" formControlName="nombre" class="form-control" id="nombre"
-                            placeholder="Ingrese su nombre">
-                    </div>
-                    <div class="form-group">
-                        <label for="apellido_paterno">Apellido Paterno</label>
-                        <input type="text" formControlName="apellido_paterno" class="form-control" id="apellido_paterno"
-                            placeholder="Ingrese su apellido paterno">
-                    </div>
-                    <div class="form-group">
-                        <label for="apellido_materno">Apellido Materno</label>
-                        <input type="text" formControlName="apellido_materno" class="form-control" id="apellido_materno"
-                            placeholder="Ingrese su apellido materno">
-                    </div>
-                    <div class="form-group">
-                        <label for="telefono">Teléfono</label>
-                        <input type="text" formControlName="telefono" class="form-control" id="telefono"
-                            placeholder="Ingrese su teléfono">
-                    </div>
-                    <div class="form-group">
-                        <label for="correo">Correo</label>
-                        <input type="email" formControlName="correo" class="form-control" id="correo"
-                            placeholder="Ingrese su correo">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Contraseña</label>
-                        <input type="password" formControlName="password" class="form-control" id="password"
-                            placeholder="Ingrese su contraseña">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirm_password">Confirmar Contraseña</label>
-                        <input type="password" formControlName="confirm_password" class="form-control"
-                            id="confirm_password" placeholder="Confirme su contraseña">
-                    </div>
+  <div class="modal-header">
+    <h5 class="modal-title">Registrar Paciente</h5>
+</div>
+<div class="modal-body">
+    <form [formGroup]="registrarEspecialistaForm" class="letter">
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Datos Personales</h4>
+                <div class="form-group">
+                    <label for="tipo_documento">Tipo de Documento</label>
+                    <select formControlName="tipo_documento" class="form-control" id="tipo_documento">
+                        <option value="DNI">DNI</option>
+                        <option value="Pasaporte">Pasaporte</option>
+                        <option value="Carnet de Extranjería">Carnet de Extranjería</option>
+                    </select>
                 </div>
-                <div class="col-md-6">
-                    <h4>Datos de Especialista</h4>
-                    <div class="form-group">
-                        <label for="numero_de_colegiatura">Número de Colegiatura</label>
-                        <input type="text" formControlName="numero_de_colegiatura" class="form-control"
-                            id="numero_de_colegiatura" placeholder="Ingrese su nro de colegiatura">
-                    </div>
+                <div class="form-group">
+                    <label for="documento">Número de Documento</label>
+                    <input type="text" formControlName="documento" class="form-control" id="documento"
+                        placeholder="Ingrese su número de documento">
                 </div>
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" formControlName="nombre" class="form-control" id="nombre"
+                        placeholder="Ingrese su nombre">
+                </div>
+                <div class="form-group">
+                    <label for="apellido_paterno">Apellido Paterno</label>
+                    <input type="text" formControlName="apellido_paterno" class="form-control" id="apellido_paterno"
+                        placeholder="Ingrese su apellido paterno">
+                </div>
+                <div class="form-group">
+                    <label for="apellido_materno">Apellido Materno</label>
+                    <input type="text" formControlName="apellido_materno" class="form-control" id="apellido_materno"
+                        placeholder="Ingrese su apellido materno">
+                </div>
+                <!-- Ubicacion por Departameno, Provincia, Distrito -->
+                <div class="form-group">
+                    <label for="departamento">Departamento</label>
+                    <select [(ngModel)]="departamento" formControlName="departamento" class="form-control" id="departamento" (change)="obtenerProvincias(departamento, registrarEspecialistaForm)">
+                      <option *ngFor="let depart of departamentos" [value]="depart">{{depart}}</option>
+                    </select>
+                    <label for="provincia">Provincia</label>
+                    <select [(ngModel)]="provincia" formControlName="provincia" class="form-control" id="provincia" (change)="obtenerDistritos(departamento, provincia)">
+                      <option *ngFor="let prov of provincias" [value]="prov">{{prov}}</option>
+                    </select>
+                    <label for="distrito">Distrito</label>
+                    <select [(ngModel)]="distrito" formControlName="distrito" class="form-control" id="distrito">
+                      <option *ngFor="let distri of distritos" [value]="distri">{{distri}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="telefono">Teléfono</label>
+                    <input type="text" formControlName="telefono" class="form-control" id="telefono"
+                        placeholder="Ingrese su teléfono">
+                </div>
+                <!-- fecha nacimiento -->
+                <div class="form-group">
+                    <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+                    <input type="date" formControlName="fecha_nacimiento" class="form-control" id="fecha_nacimiento"
+                    placeholder="Ingrese su fecha de nacimiento">
+                </div>
+                <!-- Sexo -->
+                <div class="form-group">
+                    <label for="sexo">Sexo</label>
+                    <select formControlName="sexo" class="form-control" id="sexo">
+                        <option value="Masculino">Masculino</option>
+                        <option value="Femenino">Femenino</option>
+                        <option value="Otro">Otro</option>
+                    </select>
+                </div>
+
+                <h4>Datos de Usuario</h4>
+                <div class="form-group">
+                    <label for="correo">Correo</label>
+                    <input type="email" formControlName="correo" class="form-control" id="correo"
+                        placeholder="Ingrese su correo">
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" formControlName="password" class="form-control" id="password"
+                        placeholder="Ingrese su contraseña">
+                </div>
+                <div class="form-group">
+                    <label for="confirm_password">Confirmar Contraseña</label>
+                    <input type="password" formControlName="confirm_password" class="form-control"
+                        id="confirm_password" placeholder="Confirme su contraseña">
+                </div>
+
+                <h4>Datos de Especialista</h4>
+                <div class="form-group">
+                    <label for="licencia">Licencia</label>
+                    <input type="text" formControlName="licencia" class="form-control" id="licencia"
+                        placeholder="Ingrese numero de licencia">
+                </div>
+                <div class="form-group" oninput="checkPasswords()">
+                    <label for="especialidad">Especialidad</label>
+                    <input type="text" formControlName="especialidad" class="form-control" id="especialidad"
+                        placeholder="Ingrese su especialidad">
+                </div>
+                <div *ngIf="!this.checkpass">Passwords do not match</div>
             </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="modal.dismiss('cancel')">Cancelar Registro</button>
-        <button type="button" class="btn btn-primary" (click)="register()">Registrarse</button>
-    </div>
+        </div>
+    </form>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.dismiss('cancel')">Cancelar Registro</button>
+    <button type="button" class="btn btn-primary" (click)="register()">Registrarse</button>
+</div>
 </ng-template>
--->
