Login final correccion

--- a/src/app/sites/autenticacion/login/login.component.html
+++ b/src/app/sites/autenticacion/login/login.component.html
@@ -54,7 +54,7 @@
                         <select formControlName="tipo_documento" class="form-control" id="tipo_documento">
                             <option value="DNI">DNI</option>
                             <option value="Pasaporte">Pasaporte</option>
-                            <option value="Carnet de Extranjería">Carnet de Extranjería</option>
+                            <option value="CE">Carnet de Extranjería</option>
                         </select>
                     </div>
                     <div class="form-group">
