schemas added and updated, mapa component added and vigilance component updated

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,6 +23,9 @@
             <a class="nav-link text-white" href="../home">Inicio</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-white" href="../mapa">Mapa de calor</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-white" href="../vigilance">Vigilancia</a>
         </li>
         <li class="nav-item">
