--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -1,97 +1,108 @@
-
 <div class="container mt-5">
-  <div class="jumbotron text-white bg-cover">
-      <div class="container text-black">
-          <h1 class="display-4 "><div class="d-inline-flex box">Bienvenido a SISVITA</div></h1>
-          <div class="lead pt-lg-3"><div class="d-inline-flex box">El Sistema Integral de Salud y Vida para la evaluación y seguimiento de la ansiedad. </div></div>
-          <a href="#features" class="btn button2 mt-3 ms-2">Descubre Más</a>
-      </div>
-  </div>
-  <div id="features" class="mt-5">
-  </div>
-  <div id="mission-vision" class="mt-5 mb-5">
-      <h2 class="text-center">Nuestra Misión y Visión</h2>
-      <div class="row mt-4">
-          <div class="col-md-6">
-              <h3 class="text-center">Misión</h3>
-              <p class="px-lg-3">SISVITA se dedica a proporcionar a los jóvenes herramientas para medir y comprender sus niveles de ansiedad. Nuestra misión es facilitar el acceso a evaluaciones rápidas y precisas, y brindar apoyo continuo a través de especialistas comprometidos con la salud mental.</p>
-          </div>
-          <div class="col-md-6">
-              <h3 class="text-center">Visión</h3>
-              <p class="px-lg-3">Nos esforzamos por ser la plataforma líder en el seguimiento y tratamiento de la ansiedad en jóvenes. Visualizamos un futuro donde cada joven tenga acceso a los recursos necesarios para mantener su bienestar mental, con el respaldo de profesionales que guíen su progreso hacia una vida más saludable.</p>
-          </div>
-          <div *ngIf="user === 'estudiante' ">
-            <!-- <ng-template #dashboardEstudiante let-modal> -->
-              <div class="row text-center mt-4">
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <img src="../../assets/test-dashboard.jpg" class="card-img-top" alt="Realizar Test">
-                        <div class="card-body">
-                            <h5 class="card-title">Realizar Test</h5>
-                            <p class="card-text">Accede a diversos tests para evaluar tu nivel de ansiedad de forma rápida y sencilla.</p>
-                            <a href="../test" class="btn btn-primary">Hacer Test</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <img src="../../assets/historial-dashboard.webp" class="card-img-top" alt="Historial Clínico">
-                        <div class="card-body">
-                            <h5 class="card-title">Historial Clínico</h5>
-                            <p class="card-text">Consulta tu historial clínico y sigue el progreso de tu tratamiento con nuestros especialistas.</p>
-                            <a href="../historial" class="btn btn-primary">Ver Historial</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <img src="../../assets/perfil-dashboard.jpg" class="card-img-top" alt="Mi Cuenta">
-                        <div class="card-body">
-                            <h5 class="card-title">Mi Cuenta</h5>
-                            <p class="card-text">Administra tu perfil, cambia tu contraseña y configura tus preferencias.</p>
-                            <a href="../perfil" class="btn btn-primary">Administrar Cuenta</a>
-                        </div>
-                    </div>
-                </div>
-              </div>
-            <!-- </ng-template> -->
-
-          </div>
-          <div *ngIf="user === 'especialista' ">
-            <div class="row text-center mt-4">
-              <div class="col-md-4 mb-4">
-                  <div class="card h-100">
-                      <img src="../../assets/test-dashboard.jpg" class="card-img-top" alt="Realizar Test">
-                      <div class="card-body">
-                          <h5 class="card-title">Revisar Pacientes</h5>
-                          <p class="card-text">Obten informacion sobre los historiales de los pacientes que se la han asignado.</p>
-                          <a href="../pacientes" class="btn btn-primary">Ver Pacientes</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <div class="card h-100">
-                      <img src="../../assets/historial-dashboard.webp" class="card-img-top" alt="Historial Clínico">
-                      <div class="card-body">
-                          <h5 class="card-title">Horario Profesional</h5>
-                          <p class="card-text">Consulte su horario de atenciones, citas programadas, horarios disponibles.</p>
-                          <a href="../horario" class="btn btn-primary">Ver Horario</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <div class="card h-100">
-                      <img src="../../assets/perfil-dashboard.jpg" class="card-img-top" alt="Mi Cuenta">
-                      <div class="card-body">
-                          <h5 class="card-title">Mi Cuenta</h5>
-                          <p class="card-text">Administra tu perfil, cambia tu contraseña y configura tus preferencias.</p>
-                          <a href="../perfil" class="btn btn-primary">Administrar Cuenta</a>
-                      </div>
-                  </div>
-              </div>
+    <div class="jumbotron text-white bg-cover">
+        <div class="container text-black">
+            <h1 class="display-4 ">
+                <div class="d-inline-flex box">Bienvenido a SISVITA</div>
+            </h1>
+            <div class="lead pt-lg-3">
+                <div class="d-inline-flex box">El Sistema Integral de Salud y Vida para la evaluación y seguimiento de
+                    la ansiedad. </div>
             </div>
-          </div>
-      </div>
-  </div>
-</div>
+            <a href="../home" class="btn button2 mt-3 ms-2">Descubre Más</a>
+        </div>
+    </div>
+    <div id="features" class="mt-5">
+    </div>
+    <div id="mission-vision" class="mt-5 mb-5">
+        <h2 class="text-center">Nuestra Misión y Visión</h2>
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <h3 class="text-center">Misión</h3>
+                <p class="px-lg-3">SISVITA se dedica a proporcionar a los jóvenes herramientas para medir y comprender
+                    sus niveles de ansiedad. Nuestra misión es facilitar el acceso a evaluaciones rápidas y precisas, y
+                    brindar apoyo continuo a través de especialistas comprometidos con la salud mental.</p>
+            </div>
+            <div class="col-md-6">
+                <h3 class="text-center">Visión</h3>
+                <p class="px-lg-3">Nos esforzamos por ser la plataforma líder en el seguimiento y tratamiento de la
+                    ansiedad en jóvenes. Visualizamos un futuro donde cada joven tenga acceso a los recursos necesarios
+                    para mantener su bienestar mental, con el respaldo de profesionales que guíen su progreso hacia una
+                    vida más saludable.</p>
+            </div>
+            <div *ngIf="user === 'estudiante' ">
+                <!-- <ng-template #dashboardEstudiante let-modal> -->
+                <div class="row text-center mt-4">
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/test-dashboard.jpg" class="card-img-top" alt="Realizar Test">
+                            <div class="card-body">
+                                <h5 class="card-title">Realizar Test</h5>
+                                <p class="card-text">Accede a diversos tests para evaluar tu nivel de ansiedad de forma
+                                    rápida y sencilla.</p>
+                                <a href="../select-test" class="btn btn-primary">Hacer Test</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/historial-dashboard.webp" class="card-img-top"
+                                alt="Historial Clínico">
+                            <div class="card-body">
+                                <h5 class="card-title">Ver test realizados</h5>
+                                <p class="card-text">Consulta sus test realizados y sigue el progreso de evaluación. Los especialistas consignarán su resultado.</p>
+                                <a href="../tests-performed" class="btn btn-primary">Ver Test realizados</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/perfil-dashboard.jpg" class="card-img-top" alt="Mi Cuenta">
+                            <div class="card-body">
+                                <h5 class="card-title">Mi Cuenta</h5>
+                                <p class="card-text">Administra tu perfil para la visualización de datos.</p>
+                                <a href="../my-profile" class="btn btn-primary">Administrar Cuenta</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- </ng-template> -->
 
+            </div>
+            <div *ngIf="user === 'especialista' ">
+                <div class="row text-center mt-4">
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/test-dashboard.jpg" class="card-img-top" alt="Realizar Test">
+                            <div class="card-body">
+                                <h5 class="card-title">Vigilar test</h5>
+                                <p class="card-text">Obten informacion sobre los test realizados de los pacientes para consignarlos</p>
+                                <a href="../vigilance" class="btn btn-primary">Ver Pacientes</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/historial-dashboard.webp" class="card-img-top"
+                                alt="Historial Clínico">
+                            <div class="card-body">
+                                <h5 class="card-title">Mapa de calor</h5>
+                                <p class="card-text">Consulte en que partes del país hay mayor número de indices de ansiedad grave</p>
+                                <a href="../my-profile" class="btn btn-primary">Ver Mapa de Calor</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="/assets/perfil-dashboard.jpg" class="card-img-top" alt="Mi Cuenta">
+                            <div class="card-body">
+                                <h5 class="card-title">Mi Cuenta</h5>
+                                <p class="card-text">Administra tu perfil para la visualización de sus datos de especialista.</p>
+                                <a href="../my-profile" class="btn btn-primary">Administrar Cuenta</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
