--- a/src/app/sites/tests-performed/tests-performed.component.html
+++ b/src/app/sites/tests-performed/tests-performed.component.html
@@ -11,9 +11,13 @@
                     class="list-group-item list-group-item-action" *ngFor="let test of tests"
                     >
                     <a href="javascript:void(0)" (click)="getResumen(test)" class="text-decoration-none">
-                        <h5 class="mb-1"> Realizado el {{ test.fecha | date: 'dd/MM/yyyy - hh:mm:ss' }}</h5>
+                        <h5>{{ test.tipo_test.nombre }}</h5>
                         <div class="interpretacion">
-                            <p class="mb-1 text-muted">{{ test.interpretacion }}</p>
+                            <div>
+                                <p><strong>Fecha realizada:</strong> {{ test.fecha | date: 'dd/MM/yyyy - hh:mm:ss' }}</p>
+                                <p class="mb-1 text-muted"><strong>Interpretacion: </strong>{{ test.interpretacion }} - {{test.resultado}} pts.</p>
+                                <p><strong>Estado:</strong> {{ test?.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}</p>
+                            </div>
                             <p class="color" [style.background-color]="test.color"></p>
                         </div>
                     </a>
@@ -36,8 +40,11 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Interpretacion: {{ test?.interpretacion }}</h5>
+                    <h5 class="card-title">Anñalisis del especialista:</h5>
+                    <p><strong>Consignacion: </strong>{{ test?.ansiedad_consignada }}</p>
+                    <p><strong>Observación: </strong>{{ test?.observaciones }}</p>
                     <h5 class="card-title">Resumen:</h5>
-                    <ul class="list-group" *ngIf="preguntasContestadas.length == 5; else Cargando">
+                    <ul class="list-group" *ngIf="preguntasContestadas.length > 0; else Cargando">
                         <li class="list-group-item" *ngFor="let preguntaContestada of preguntasContestadas">
                             <p><strong>Pregunta:</strong> {{ preguntaContestada.pregunta }}</p>
                             <p><strong>Respuesta:</strong> {{ preguntaContestada.alternativa }}</p>
