--- a/src/app/sites/autenticacion/bienvenida/bienvenida.component.html
+++ b/src/app/sites/autenticacion/bienvenida/bienvenida.component.html
@@ -1,7 +1,19 @@
 <div class="bg px-3">
     <div class="welcome-box">
         <h1 class="display-4">Bienvenido a SISVITA</h1>
-        <p class="lead">Realiza tests para conocer tu nivel de ansiedad.</p>
+        <p class="lead">El Sistema Integral de Salud y Vida para la evaluación y seguimiento de la ansiedad.</p>
         <button class="btn btn-primary px-4" (click)="onClick()">Iniciar</button>
+        <br>
     </div>
+    
+    <div class="about-us">
+        <br>
+        <h2>Sobre Nosotros</h2>
+        <p>SISVITA es una plataforma dedicada a ayudar a las personas a entender y gestionar su ansiedad. Nos dedicamos a proporcionar a personas de todas las edades y profesiones herramientas innovadoras para medir y comprender sus niveles de ansiedad. Nuestro objetivo es facilitar el acceso a evaluaciones rápidas y precisas, y brindar apoyo continuo a través de especialistas comprometidos con la salud mental.
+
+            En nuestro sistema encontrarás distintos profesionales de la psicología formados en diversas áreas y con diferentes orientaciones (humanista, psicodinámica, sistémica, cognitivo-conductual), lo cual permite abordar la problemática desde múltiples perspectivas. Lo más importante para nosotros es que el paciente siempre se sienta cómodo, adaptándonos a su forma de entender su mundo.
+            
+            Visualizamos un futuro donde cada individuo tenga acceso a los recursos necesarios para mantener su bienestar mental, con el respaldo de profesionales que guíen su progreso hacia una vida más saludable.</p>
+    </div>
+
 </div>
